@@ -1,3 +1,5 @@
+	* add torrent_flag to default all file priorities to dont_download
+	* fix &so= feature in magnet links
 	* improve compatibility of SOCKS5 UDP ASSOCIATE
 	* fix madvise range for flushing cache in mmap_storage
 	* open files with no_cache set in O_SYNC mode
